# pytestCICD

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
app/: main.py
tests/: conftest.py  test_app_async.py  test_app_integrations.py  test_app_units.py
